# tg-ws-proxy-rs

./: .gitignore  BUILD_INSTRUCTIONS.md  CHANGES.md  CROSS_COMPILE_RU.md  Cargo.toml  GUI_README.md  Makefile  README.md  build.rs  platforms.bat  platforms.sh
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
other/: BUILD_ALL_PLATFORMS_RU.md  TROUBLESHOOTING_RU.md  oldREADME.md
src/: config.rs  dc_updater.rs  gui.rs  logger.rs  main.rs  pool.rs  proxy.rs  ws_client.rs
