[package]
name = "tg-ws-proxy-rs"
version = "1.0.7"
edition = "2021"
description = "Telegram MTProto WebSocket Bridge Proxy — Rust port of Flowseal/tg-ws-proxy"
license = "MIT"

[[bin]]
name = "tg-ws-proxy"
path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket protocol with TLS support
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.24" }

# AES-256-CTR encryption for MTProto obfuscation
aes = "0.8"
ctr = "0.9"
cipher = "0.4"

# SHA-256 for MTProto key derivation
sha2 = "0.10"

# Random bytes for handshake generation
rand = "0.8"

# Hex encoding / decoding utilities
hex = "0.4"

# CLI argument parsing (with env-variable fallback)
clap = { version = "4", features = ["derive", "env"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

# Async stream utilities (SinkExt, StreamExt)
futures-util = "0.3"

# HTTP client for DC updater
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
serde_json = { version = "1.0", optional = true }

# Custom TLS configuration (skip-verify option)
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
# Bundled Mozilla root cert store (used by the default TLS connector)
webpki-roots = "0.26"

# GUI
eframe = { version = "0.29", optional = true }
egui = { version = "0.29", optional = true }
parking_lot = { version = "0.12", optional = true }

[features]
default = ["gui", "dc-updater"]
gui = ["eframe", "egui", "parking_lot"]
dc-updater = ["reqwest", "serde_json"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
